<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="reza.tugasacs.MainActivity"
    android:background="#aeb1fa">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_alignParentBottom="false"
        android:layout_alignParentStart="true"
        android:lines="6"
        android:background="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tableLayout"
            android:padding="5dp"
            android:baselineAligned="false"
            android:textAlignment="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/nasi_goreng"
                    android:id="@+id/tvNG" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/rp_12_000"
                    android:id="@+id/tvHargaNG"
                    android:layout_margin="5dp" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spNG"
                    android:layout_column="1"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/Jumlah"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/mie_goreng"
                    android:id="@+id/tvMG" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/rp_10_000"
                    android:id="@+id/tvHargaMG" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spMG"
                    android:layout_column="1"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/Jumlah"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/mie_rebus"
                    android:id="@+id/tvMR" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/rp_11_000"
                    android:id="@+id/tvHargaMR" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spMR"
                    android:layout_column="1"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/Jumlah"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/kwetiaw"
                    android:id="@+id/tvK" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/rp_14_000"
                    android:id="@+id/tvHargaK" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spK"
                    android:layout_column="1"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/Jumlah"/>

            </TableRow>

        </TableLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/total"
        android:id="@+id/tvTotal"
        android:layout_below="@+id/scrollView"
        android:layout_alignParentStart="true"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/tvPembayaran"
        android:layout_below="@+id/scrollView"
        android:layout_toEndOf="@+id/tvTotal"
        android:inputType="number|text|textCapCharacters|numberSigned|numberDecimal"
        android:layout_margin="5dp" />

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/bayar"
        android:id="@+id/btnBayar"
        android:layout_below="@+id/scrollView"
        android:layout_alignEnd="@+id/editText" />

</RelativeLayout>
